# mcp-server-python

./: .env.example  .gitignore  API_SERVER_TOOLS.md  API_TOOLS.md  LLM_API_REFERENCE.md  MCP_CLIENT_SETUP.md  POSTGRES_SERVER_TOOLS.md  README.md  REST_API.md  api_client.py  api_server.py  database.py  postgres_server.py  pyproject.toml  rest_api_server.py  sample_schema.sql  start_api_with_ngrok.py  start_with_ngrok.py
api_server/: api_client.py  api_config.py  api_server.py  start_api_with_ngrok.py
postgres_server/: config.py  database.py  postgres_server.py  start_with_ngrok.py
